instance1/temp-retrieve/objects/API_Operation__mdt/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Only</label>
    <type>Checkbox</type>
</CustomField>