instance1/temp-retrieve/objects/API_Operation__mdt/fields/Root_SObject__c.field-meta.xml
<CustomField>
    <fullName>Root_SObject__c</fullName>
    <label>Root SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>