instance1/temp-retrieve/objects/API_Operation__mdt/fields/TimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>TimeoutMs__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>TimeoutMs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>